examples/test/testpolicy10184.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10184
  namespace: namespace134
spec:
  podSelector:
    matchLabels:
      key23: value47
      key14: value8
      key46: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value14
          key30: value1
      podSelector:
        matchLabels:
          key38: value36
